--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@ async function sendToServer(entry = {}, reset = false, line = "", action = "add"
   try {
     const res = await fetch(`${SERVER_URL}/add`, {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
+      headers: { 
+        "Content-Type": "application/json",
+        "Cache-Control": "no-cache"
+      },
       body: JSON.stringify({ entry, reset, line, action, password })
     });
 
@@ -130,7 +133,7 @@ async function sendToServer(entry = {}, reset = false, line = "", action = "add"
     }
 
     const data = await res.json();
-    await loadLog(); // refresh log immediately after success
+    await loadLog(true); // Force refresh after success
     return data;
   } catch (err) {
     alert("Server unreachable");
@@ -139,9 +142,17 @@ async function sendToServer(entry = {}, reset = false, line = "", action = "add"
 }
 
 /* ===== LOAD LOG ===== */
-async function loadLog() {
+async function loadLog(forceRefresh = false) {
   try {
-    const res = await fetch(`${SERVER_URL}/log.json?${Date.now()}`);
+    // Add timestamp to bust cache
+    const timestamp = forceRefresh ? Date.now() : new Date().getTime();
+    const res = await fetch(`${SERVER_URL}/log.json?_=${timestamp}`, {
+      headers: {
+        "Cache-Control": "no-cache, no-store, must-revalidate",
+        "Pragma": "no-cache",
+        "Expires": "0"
+      }
+    });
     const data = await res.json();
     populateLines(data);
     displayLog(data);
@@ -172,14 +183,17 @@ async function loadLog() {
         updateSummary();
       } else {
         // No active run or run has been ended
-        runStartTime = null;
-        material = "";
-        lastCount = null;
-        targetCount = null;
-        updateSummary();
+        if (!forceRefresh || (forceRefresh && !activeStart) || lastRunEntry) {
+          runStartTime = null;
+          material = "";
+          lastCount = null;
+          targetCount = null;
+          updateSummary();
+        }
       }
     }
-  } catch {
+  } catch (err) {
+    console.error("Load log error:", err);
     document.getElementById("log").innerHTML = "<small>Server not reachable.</small>";
   }
 }
@@ -333,9 +347,10 @@ async function endRun() {
         targetCount = l.targetCount;
     }
 
-    // Clear run state
+    // Clear run state immediately
     runStartTime = null;
     material = "";
+    await loadLog(true); // Force refresh to sync with server
     updateSummary();
 }
 
@@ -389,7 +404,8 @@ function updateLastRunInfo(data = []) {
 
 /* ===== INIT ===== */
 loadLog();
-setInterval(loadLog, 5000); // refresh log every 5 seconds
+// More frequent polling for better sync across devices
+setInterval(() => loadLog(false), 2000); // Refresh every 2 seconds instead of 5
 </script>
 
 </body>
