--- a/index.html
+++ b/index.html
@@ -271,6 +271,7 @@ async function loadLog() {
   try {
     const res = await fetch(`${SERVER_URL}/log.json?${Date.now()}`);
     const data = await res.json();
+    console.log("Loaded data for line", currentLine, data);
     populateLines(data);
     displayLog(data);
     updateLastRunInfo(data);
@@ -280,7 +281,10 @@ async function loadLog() {
       const activeStart = data.find(e => e.line === currentLine && e.time === "Start");
       const lastRunEntry = data.find(e => e.line === currentLine && e.last_run);
       
+      console.log("Active start:", activeStart, "Last run entry:", lastRunEntry);
+      
       if (activeStart && !lastRunEntry) {
+        console.log("Found active run");
         // Active run exists and hasn't been ended
         runStartTime = activeStart.timestamp
             ? new Date(activeStart.timestamp)
@@ -299,19 +303,20 @@ async function loadLog() {
         targetCount = activeStart.targetCount || null;
         updateSummary();
       } else {
-        // No active run or run has been ended
+        console.log("No active run or run ended - clearing state");
+        // No active run OR run has been ended - CLEAR ALL STATE
         runStartTime = null;
         material = "";
         lastCount = null;
         targetCount = null;
-        updateSummary();
+        updateSummary(); // This was missing!
       }
     }
-  } catch {
+  } catch (err) {
+    console.error("Load log error:", err);
     document.getElementById("log").innerHTML = "<small>Server not reachable.</small>";
   }
 }
-
 
 
 
