--- a/index.html
+++ b/index.html
@@ -125,8 +125,7 @@ totalUptime: 0,
 totalDowntime: 0,
 startTime: null
 };
-const SERVER_URL = "  https://transition-health-notify-hoped.trycloudflare.com";
-
+const SERVER_URL = "https://cowboy-chemicals-julie-emails.trycloudflare.com"
 /* ===== DOM ===== */
 const lineSelect = document.getElementById("lineSelect");
 const materialInput = document.getElementById("material");
