--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Hourly Case Tracker</title>
+<title>Hourly Case Tracker By: Brandon McGirl</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * { box-sizing: border-box; }
@@ -54,7 +54,7 @@ border-radius: 5px;
 </head>
 <body>
 
-<h1>Hourly Case Tracker</h1>
+<h1>Hourly Case Tracker By: Brandon McGirl</h1>
 
 <div class="card">
 <h3>Line Selection</h3>
@@ -118,14 +118,15 @@ let lastCount = null;
 let targetCount = null;
 let material = "";
 let runStartTime = null;
-let lastRun = {}; // per line
+let lastRun = {};
 let downtimeData = {
 status: "stopped",
 totalUptime: 0,
 totalDowntime: 0,
-startTime: null
+sessionStart: null
 };
-const SERVER_URL = "https://que-nobody-bedding-portfolio.trycloudflare.com"
+const SERVER_URL = "https://viking-mil-capital-ladies.trycloudflare.com";                                      |";
+
 /* ===== DOM ===== */
 const lineSelect = document.getElementById("lineSelect");
 const materialInput = document.getElementById("material");
@@ -183,7 +184,7 @@ return { error: "Forbidden" };
 }
 
 const data = await res.json();
-await loadLog(); // refresh log immediately after success
+await loadLog();
 return data;
 } catch (err) {
 alert("Server unreachable");
@@ -221,31 +222,29 @@ alert("Wrong password!");
 return;
 }
 
-await loadDowntime(); // Refresh downtime status
+await loadDowntime();
 } catch (err) {
 alert("Server unreachable");
 }
 }
 
-// ✅ KEEP ONLY THIS VERSION OF loadDowntime()
 async function loadDowntime() {
 try {
 const res = await fetch(`${SERVER_URL}/downtime.json?${Date.now()}`);
 const allDowntimeData = await res.json();
 
-// Get downtime data for current line
 const lineDowntime = allDowntimeData[currentLine] || {
 status: "stopped",
 total_uptime: 0,
 total_downtime: 0,
-start_time: null
+session_start: null
 };
 
 downtimeData = {
 status: lineDowntime.status,
 totalUptime: lineDowntime.total_uptime || 0,
 totalDowntime: lineDowntime.total_downtime || 0,
-startTime: lineDowntime.start_time
+sessionStart: lineDowntime.session_start
 };
 
 updateDowntimeDisplay();
@@ -258,41 +257,29 @@ function updateDowntimeDisplay() {
 const statusDiv = document.getElementById("downtimeStatus");
 const displayDiv = document.getElementById("downtimeDisplay");
 
-// Update button text and class
 downtimeButton.textContent = downtimeData.status === "running" ? "Stop Uptime Tracking" : "Start Uptime Tracking";
 downtimeButton.className = downtimeData.status === "running" ? "downtime stop" : "downtime";
 
-// Update status display
 const statusLight = downtimeData.status === "running" ?
 '<span class="status-light running"></span>' :
 '<span class="status-light stopped"></span>';
 const statusText = downtimeData.status === "running" ? "RUNNING" : "STOPPED";
 statusDiv.innerHTML = `${statusLight} Status: ${statusText}`;
 
-// Calculate current session time if running
 let currentSession = 0;
-if (downtimeData.status === "running" && downtimeData.startTime) {
-const startTime = new Date(downtimeData.startTime);
-currentSession = (new Date() - startTime) / 1000; // seconds
+if (downtimeData.sessionStart) {
+const startTime = new Date(downtimeData.sessionStart);
+currentSession = (new Date() - startTime) / 1000;
 }
 
-// Calculate current downtime session time if downtime is being tracked
-let currentDowntimeSession = 0;
-if (downtimeData.status === "stopped" && downtimeData.startTime && runStartTime) {
-const startTime = new Date(downtimeData.startTime);
-currentDowntimeSession = (new Date() - startTime) / 1000; // seconds
-}
-
-// Total calculations
 const totalUptimeSeconds = downtimeData.totalUptime + (downtimeData.status === "running" ? currentSession : 0);
-const totalDowntimeSeconds = downtimeData.totalDowntime + (downtimeData.status === "stopped" ? currentDowntimeSession : 0);
+const totalDowntimeSeconds = downtimeData.totalDowntime + (downtimeData.status === "stopped" ? currentSession : 0);
 
 const uptimeHours = Math.floor(totalUptimeSeconds / 3600);
 const uptimeMinutes = Math.floor((totalUptimeSeconds % 3600) / 60);
 const downtimeHours = Math.floor(totalDowntimeSeconds / 3600);
 const downtimeMinutes = Math.floor((totalDowntimeSeconds % 3600) / 60);
 
-// Display uptime/downtime
 displayDiv.innerHTML = `
 <strong>Uptime:</strong> ${uptimeHours}h ${uptimeMinutes}m<br>
 <strong>Downtime:</strong> ${downtimeHours}h ${downtimeMinutes}m<br>
@@ -370,7 +357,6 @@ ${Math.round(percentage)}%
 `;
 progressContainer.appendChild(progressBar);
 } else if (currentLine && !runStartTime) {
-// No active run
 const progressBar = document.createElement("div");
 progressBar.className = "progress-bar-container";
 progressBar.innerHTML = `
@@ -392,16 +378,14 @@ populateLines(data);
 displayLog(data);
 updateLastRunInfo(data);
 
-// Detect active run for current line
 if (currentLine) {
 const activeStart = data.find(e => e.line === currentLine && e.time === "Start");
 if (activeStart) {
 runStartTime = activeStart.timestamp
 ? new Date(activeStart.timestamp)
-: new Date(); // fallback if missing
+: new Date();
 material = activeStart.material;
 
-// Find the latest count for this line
 const lineEntries = data.filter(e => e.line === currentLine && e.time !== "Init" && e.time !== "Start");
 if (lineEntries.length > 0) {
 const latestEntry = lineEntries[lineEntries.length - 1];
@@ -414,7 +398,6 @@ targetCount = activeStart.targetCount || null;
 updateSummary();
 updateProgressBar();
 } else {
-// No active run
 runStartTime = null;
 material = "";
 lastCount = null;
@@ -447,8 +430,6 @@ updateSummary();
 updateProgressBar();
 displayLog([]);
 updateLastRunInfo();
-
-// Reload downtime when line changes
 loadDowntime();
 }
 
@@ -519,12 +500,10 @@ targetCount: targetCount
 
 const data = await sendToServer(entry, false, currentLine, "add", true);
 if (!data.error) {
-// Only set local state if server accepted it
 runStartTime = new Date();
 updateSummary();
 updateProgressBar();
 }
-// If there's an error (wrong password), don't update anything
 }
 
 /* ===== ADD ENTRY ===== */
@@ -561,9 +540,7 @@ if (!runStartTime) return alert("No active run");
 const data = await sendToServer({}, false, currentLine, "endrun", true);
 
 if (!data.error && data.last_run) {
-// Only update if server accepted it
 const lr = data.last_run;
-// parse start correctly
 const startDate = lr.start ? new Date(lr.start) : new Date();
 const endDate = lr.end ? new Date(lr.end) : new Date();
 
@@ -574,6 +551,7 @@ start: startDate,
 end: endDate,
 targetCount: lr.targetCount
 };
+
 const l = lastRun[currentLine];
 document.getElementById("lastRun").innerHTML = `
 <b>Material:</b> ${l.material}<br>
@@ -583,16 +561,14 @@ document.getElementById("lastRun").innerHTML = `
 <b>End:</b> ${l.end.toLocaleString()}
 `;
 
-lastCount = l.count; // update lastCount so summary shows correctly until new run
+lastCount = l.count;
 targetCount = l.targetCount;
 
-// Clear run state
 runStartTime = null;
 material = "";
 updateSummary();
 updateProgressBar();
 }
-// If there's an error (wrong password), don't update anything
 }
 
 /* ===== DISPLAY LOG ===== */
@@ -625,11 +601,10 @@ count: lr.count,
 start: new Date(lr.start),
 end: new Date(lr.end),
 targetCount: lr.targetCount,
-uptime: lr.uptime || 0, // Add uptime
-downtime: lr.downtime || 0 // Add downtime
+uptime: lr.uptime || 0,
+downtime: lr.downtime || 0
 };
 
-// Format uptime/downtime for display
 const uptimeFormatted = formatTime(lr.uptime || 0);
 const downtimeFormatted = formatTime(lr.downtime || 0);
 
@@ -649,11 +624,10 @@ document.getElementById("lastRun").innerHTML = "<small>No previous run</small>";
 
 /* ===== INIT ===== */
 loadLog();
-setInterval(loadLog, 5000); // refresh log every 5 seconds
+setInterval(loadLog, 5000);
 
-// Load downtime tracking
 loadDowntime();
-setInterval(loadDowntime, 30000); // refresh downtime every 30 seconds
+setInterval(loadDowntime, 30000);
 </script>
 
 </body>
