--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ totalUptime: 0,
 totalDowntime: 0,
 sessionStart: null
 };
-const SERVER_URL = "https://viking-mil-capital-ladies.trycloudflare.com";                                      |";
+const SERVER_URL = "https://viking-mil-capital-ladies.trycloudflare.com";                                      
 
 /* ===== DOM ===== */
 const lineSelect = document.getElementById("lineSelect");
