--- a/index.html
+++ b/index.html
@@ -254,61 +254,54 @@ console.error("Downtime load error:", err);
 }
 
 function updateDowntimeDisplay() {
-const statusDiv = document.getElementById("downtimeStatus");
-const displayDiv = document.getElementById("downtimeDisplay");
+    const statusDiv = document.getElementById("downtimeStatus");
+    const displayDiv = document.getElementById("downtimeDisplay");
 
-downtimeButton.textContent = downtimeData.status === "running" ? "Stop Uptime Tracking" : "Start Uptime Tracking";
-downtimeButton.className = downtimeData.status === "running" ? "downtime stop" : "downtime";
+    downtimeButton.textContent = downtimeData.status === "running" ? "Stop Uptime Tracking" : "Start Uptime Tracking";
+    downtimeButton.className = downtimeData.status === "running" ? "downtime stop" : "downtime";
 
-const statusLight = downtimeData.status === "running" ?
-'<span class="status-light running"></span>' :
-'<span class="status-light stopped"></span>';
-const statusText = downtimeData.status === "running" ? "RUNNING" : "STOPPED";
-statusDiv.innerHTML = `${statusLight} Status: ${statusText}`;
+    const statusLight = downtimeData.status === "running" ?
+        '<span class="status-light running"></span>' :
+        '<span class="status-light stopped"></span>';
+    const statusText = downtimeData.status === "running" ? "RUNNING" : "STOPPED";
+    statusDiv.innerHTML = `${statusLight} Status: ${statusText}`;
 
-// Calculate current session time properly
-let currentSession = 0;
-if (downtimeData.sessionStart) {
-try {
-// Handle different timestamp formats
-let startTime;
-if (downtimeData.sessionStart.endsWith('Z') || downtimeData.sessionStart.includes('+') || downtimeData.sessionStart.includes('-')) {
-// Already has timezone info
-startTime = new Date(downtimeData.sessionStart);
-} else {
-// Assume UTC
-startTime = new Date(downtimeData.sessionStart + 'Z');
-}
-currentSession = (Date.now() - startTime.getTime()) / 1000; // seconds
-} catch (e) {
-console.error("Error parsing timestamp:", e);
-currentSession = 0;
-}
-}
+    // Calculate current session time properly - NO 'Z' addition needed
+    let currentSession = 0;
+    if (downtimeData.sessionStart) {
+        try {
+            // Backend timestamps are already in ISO format with timezone info
+            const startTime = new Date(downtimeData.sessionStart);
+            currentSession = (Date.now() - startTime.getTime()) / 1000; // seconds
+        } catch (e) {
+            console.error("Error parsing timestamp:", e);
+            currentSession = 0;
+        }
+    }
 
-// Calculate display values (don't double count)
-let displayUptime = downtimeData.totalUptime;
-let displayDowntime = downtimeData.totalDowntime;
+    // Calculate display values
+    let displayUptime = downtimeData.totalUptime;
+    let displayDowntime = downtimeData.totalDowntime;
 
-if (downtimeData.status === "running") {
-displayUptime += currentSession;
-} else if (downtimeData.status === "stopped") {
-displayDowntime += currentSession;
-}
+    if (downtimeData.status === "running") {
+        displayUptime += currentSession;
+    } else if (downtimeData.status === "stopped") {
+        displayDowntime += currentSession;
+    }
 
-// Handle negative or invalid values
-displayUptime = Math.max(0, displayUptime);
-displayDowntime = Math.max(0, displayDowntime);
+    // Handle negative or invalid values
+    displayUptime = Math.max(0, displayUptime);
+    displayDowntime = Math.max(0, displayDowntime);
 
-const uptimeHours = Math.floor(displayUptime / 3600);
-const uptimeMinutes = Math.floor((displayUptime % 3600) / 60);
-const downtimeHours = Math.floor(displayDowntime / 3600);
-const downtimeMinutes = Math.floor((displayDowntime % 3600) / 60);
+    const uptimeHours = Math.floor(displayUptime / 3600);
+    const uptimeMinutes = Math.floor((displayUptime % 3600) / 60);
+    const downtimeHours = Math.floor(displayDowntime / 3600);
+    const downtimeMinutes = Math.floor((displayDowntime % 3600) / 60);
 
-displayDiv.innerHTML = `
-<strong>Uptime:</strong> ${uptimeHours}h ${uptimeMinutes}m<br>
-<strong>Downtime:</strong> ${downtimeHours}h ${downtimeMinutes}m<br>
-`;
+    displayDiv.innerHTML = `
+        <strong>Uptime:</strong> ${uptimeHours}h ${uptimeMinutes}m<br>
+        <strong>Downtime:</strong> ${downtimeHours}h ${downtimeMinutes}m<br>
+    `;
 }
 
 /* ===== HELPERS ===== */
